--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "postcss": "^8.4.32",
+    "tailwindcss": "3.3.5"
   }
 }
